Rework RP Review

--- a/index.tex
+++ b/index.tex
@@ -177,8 +177,7 @@ The result evaluation is concluded with the outlook and three suggestions for po
 
 \subsection{Threats to Validity}
 
-Within the Section \emph{Threats to Validity}, Salvaneschi et al. an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers to easily, it is still questionable how representative for real-world applications they are. The research group members tried to minimize this threat through code reviews and iterative improvements. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. (iv) Finally the selection of Scala and REScala can be challenged to be representative for comprehending RP code overall. The selection was satisfying for this study though since the subjects were all exposed the same amount to these technologies and provides common foundation for the experiment.
-
+Within the Section \emph{Threats to Validity}, Salvaneschi et al. present an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers to easily, it is still questionable how representative for real-world applications they are. The research group members tried to minimize this threat through code reviews and iterative improvements. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. The section finally concludes with the question (iv) if Scala and REScala should be challenged as good choice to represent RP overall. The research group arguments that the selection was satisfying for their study since all subjects were exposed the same amount to these technologies.
 
 \section{Review of Salvaneschi et al.}
 \label{sec:review}
@@ -205,13 +204,13 @@ To further align the results at hand with FAIR research principles, we suggest t
 
 \subsection{Reactive vs. Object Oriented Programming}
 
-Before the terms of RP and OOP are introduced, Salvaneschi et al. define the \emph{reactive application}. This type of application distinguishes itself from a more traditional one-off input-to-output processing by producing a continuous, through interaction ever-changing, flow if information. By their very nature, reactive applications require design patterns to model this steady flow of data in a comprehensible way.
+Before the terms of RP and OOP are introduced, Salvaneschi et al. define the the \emph{reactive application}. This type of application distinguishes itself from a more traditional one-off input-to-output processing by producing a continuous, through interaction ever-changing, flow if information. By their very nature, reactive applications require design patterns to model this steady flow of data in a comprehensible way.
 
-\textbf{Reactive Programming} gets a thorough introduction by mentioning its roots in the Haskell programming language and the traction it gained throughout the recent years. The research group hypothesises about readability of reactive code facilitating RP. Further characteristics like the declarative way of describing data flows or baked-in composability inherited from its functional ancestor is noted later in Section 2. The group gives an overview of how \emph{REScala} implements the paradigm of RP using \mintinline{Scala}{Var}s, \mintinline{Scala}{Signal}s and the combinations of those. Because the subject population has a common understanding of Scala and was taught in RP using REScala, Salvaneschi et al. decided to use this flavor of RP for their experiment.
+\textbf{Reactive Programming} is thoroughly introduced by mentioning its roots in the Haskell programming language and the traction it gained throughout recent years. The research group hypothesises about readability of reactive code facilitating RP. Further characteristics like the declarative way of describing data flows or baked-in composability inherited from its functional ancestor are noted later in Section 2. The group gives then an overview of how \emph{REScala} implements an API to work with its RP runtime using \mintinline{Scala}{Var}s, \mintinline{Scala}{Signal}s and various combinations of those.
 
 The paradigm of \textbf{Object Oriented Programming} is less prominently introduced compared to its competitor. For its usage in reactive applications, it is quickly reduced to the Observer design pattern. Though the group highlights the decoupling of the observable and its observers as positive, inversion of control and incontrollable side effects in the observers code is noted as negative drawbacks lessen the readability and predictability of resulting source code. Since Scala does not only allow functional-flavored code, OOP code examples are presented in Scala too. We were not able to determine the specific implementation of the Observer pattern used and therefore conclude that the code examples facilitate a theoretical implementation of the design pattern.
 
-Even though the paper by Salvaneschi et al. assume the Observer design pattern as common knowledge in the expert audience, we would have appreciated an introduction on the same level as RP received. The group further reduces the OOP paradigm to one sole case which is disputable. A more differentiated approach where i.e. the patterns root in OOP is noted, but then not used throughout the report as synonym for the pattern itself would have been received well.
+Even though Salvaneschi et al. assume in their paper the Observer design pattern as common knowledge in the expert audience, we would have appreciated an introduction on the same level as RP received. The group further reduces the OOP paradigm to one sole case which is disputable. A more differentiated approach where i.e. the patterns root in OOP is noted, but then not used throughout the report as synonym for the pattern itself would have been received well.
 
 \section{Practical Application of RP}
 \label{sec:practical-application}
@@ -310,7 +309,7 @@ So, when should RP used and when should the Observer design pattern be applied u
 
 \subsection{Outlook}
 
-We hypothesized about when the application of RP might be worth or when better stick with a more traditional Observer pattern based approach in the previous Subsection \ref{sec:when-rp-when-observer}. A study providing empirical insight in the matter of the presented use cases could yield valuable results to support software projects facing the question stated in \emph{RQ2.2}.
+We hypothesised about when the application of RP might be worth or when better stick with a more traditional Observer pattern based approach in the previous Subsection \ref{sec:when-rp-when-observer}. A study providing empirical insight in the matter of the presented use cases could yield valuable results to support software projects facing the question stated in \emph{RQ2.2}.
 
 Our own experiences using RP for developing frontend applications using \emph{RxJS}\footnote{\url{https://rxjs.dev/}} resonates well with one of the proposed follow up topics by Salvaneschi et al.: ``\emph{Understanding how programmers work is fundamental to provide better tool support, especially IDEs, a research area which is vastly unexplored for RP.}''\cite{7827078} As the complexity of data flows, their transformations and dependencies increase, the need for better tooling grows likewise. Even though support libraries like \emph{rxjs-spy}\footnote{\url{https://cartant.github.io/rxjs-spy/}} or the inspection capabilities of \emph{BaconJS} do help up to some extent during debugging, we agree with Salvaneschi et al. that improvements in this field could boost the adoption and productivity of RP further.
 
