--- a/index.tex
+++ b/index.tex
@@ -170,14 +170,14 @@ The research team agrees later that the hidden complexity of the RP runtime and 
 The result evaluation is concluded with the outlook and three suggestions for potential follow-up research:
 
 \begin{itemize}
-	\item Psychology knows multiple models to describe the process of ``comprehending'' a circumstance. Salvaneschi et al. reference in \textbf{interpretation of the results} three of these models (\emph{top-down}, \emph{bottom-up} and \emph{program model}). In context, each describes how a subject might perceive either RP or OOP source code. A study focusing on the psychological aspects of code comprehension could give a new perspective on how code, RP or OOP likewise, is perceived mentally.
+	\item Psychology knows multiple models to describe the process of \emph{comprehending} a circumstance. Salvaneschi et al. reference in \textbf{interpretation of the results} three of these models (\emph{top-down}, \emph{bottom-up} and \emph{program model}). In context, each describes how a subject might perceive either RP or OOP source code. A study focusing on the psychological aspects of code comprehension could give a new perspective on how code, RP or OOP likewise, is perceived mentally.
 	\item The \textbf{language design} (API surface area, number of combinators) plays an important role in order to make resulting code more comprehensible. The research group sees potential for further studies which investigate and compare how different languages and frameworks support or lessen the comprehensibility of RP code.
 	\item To understand how programmers work will eventually lead to improved \textbf{tool support} i.e. in IDEs. Reactive applications using RP or OOP can be visualized using a graph showing dependencies of values to each other. Hence the potential of a uniform way to interpret reactive code, no matter what paradigm it uses, might be worth of further research.
 \end{itemize}
 
 \subsection{Threats to Validity}
 
-Within the Section \emph{Threats to Validity}, Salvaneschi et al. present an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers to easily, it is still questionable how representative for real-world applications they are. The research group members tried to minimize this threat through code reviews and iterative improvements. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. The section finally concludes with the question (iv) if Scala and REScala should be challenged as good choice to represent RP overall. The research group arguments that the selection was satisfying for their study since all subjects were exposed the same amount to these technologies.
+Within the Section \emph{Threats to Validity}, Salvaneschi et al. present an overview of factors which could have pulled or pushed their results into one or another direction. They give insight in how they tried to minimize those influences, if possible. Neglecting \emph{construct} and \emph{internal validity}, the group identifies five issues related to \emph{external validity}: (i) Comparing two programming paradigms depends on an individuals programming skill level. Though a bias towards RP can be desisted, the study's result shows a favorable tendency towards RP in the end. (ii) The code examples used throughout the comprehension task try to cover the main areas of reactive applications. Hence these samples were carefully crafted to avoid giving away correct answers to easily, it is still questionable how representative for real-world applications they are. The research group members tried to minimize this threat through code reviews and iterative improvements. (iii) The experiment was conducted with student subjects solely. Though differences to more experienced developers can be considered as not significant as a cited study \cite{DiPenta} indicates. The section finally concludes with the question (iv) if Scala and REScala should be challenged as good choice to represent RP overall. The research group arguments that the selection was satisfying for their study since all subjects were exposed the same level to these technologies in advance.
 
 \section{Review of Salvaneschi et al.}
 \label{sec:review}
@@ -223,9 +223,9 @@ The previously reviewed paper by Salvaneschi et al. explores how RP changes the 
 	\noindent\emph{UC1 Data Flow:} Fetch a users complete profile information (first- and surname as well as their avatar picture) from two distinct data sources (\mintinline{JavaScript}{fetchProfile} and \mintinline{JavaScript}{fetchAvatar}). The profile information contains required input to fetch the avatar. Show the combined information in the UI at once using \mintinline{JavaScript}{renderUser}.
 \end{framed}
 
-The case describes a common problem where the information from a remote resource needs to be combined with another one. The situation gets a bit more complex when the result of the first resource is required as input for the second one. Generally spoken, a solution to this problem describes the flow (fetch one resource after the other) and transformation (combination of both results) of data.
+The case describes a common problem where the information from a remote resource needs to be combined with another one. The situation gets a bit more complex when the result of the first resource is required as input for the second one. Generally spoken, a solution to this problem describes the flow (fetch one resource after the other) and transformation (combination of both results) of data. After the classification for reactive applications as defined by Salvaneschi et al. \cite{7827078}, UC1 describes a \emph{synthetic application}.
 
-We can implement a solution facilitating a basic RP approach using the \mintinline{JavaScript}{Promise}\footnote{\url{https://www.ecma-international.org/ecma-262/6.0/\#sec-promise-objects}} API available in modern JavaScript runtime environments as exemplified in Listing \ref{lst:data-flow-rp}.
+We can implement a solution facilitating a basic RP approach using the \mintinline{JavaScript}{Promise}\footnote{\url{https://www.ecma-international.org/ecma-262/6.0/\#sec-promise-objects}} API available in modern JavaScript runtime environments as exemplified in Listing \ref{lst:data-flow-rp}:
 
 \begin{listing}[H]
 	\begin{minted}{JavaScript}
@@ -240,24 +240,26 @@ We can implement a solution facilitating a basic RP approach using the \mintinli
 	\label{lst:data-flow-rp}
 \end{listing}
 
-Whereas Listing \ref{lst:data-flow-observer} leverages an implementation of the Observer design pattern after Gamma et al. \cite{gamma1995design}, Listing \ref{lst:data-flow-rp} uses an RP approach. Hence both provide the same functionality in the end. By solely inspecting the line count of both implementations, we fully confirm the results of Salvaneschi et al. \cite{7827078} regarding added boilerplate code. The RP solution reflects the mental model of fetching one resource after another clearly whereas the Observer needs to implement code for handling \mintinline{JavaScript}{fetchAvatar}s result (line 12) before \mintinline{JavaScript}{fetchProfile} is even called (line 17).
+The execution of \mintinline{JavaScript}{fetchProfile} on line 1 returns a \mintinline{JavaScript}{Promise} providing basic user profile information. The profile serves as input parameter for \mintinline{JavaScript}{fetchAvatar} which returns another \mintinline{JavaScript}{Promise} (line 3). Once this \mintinline{JavaScript}{Promise} resolves with the avatar picture information, all fetched data is combined and returned (line 4). This data is then finally piped to the \mintinline{JavaScript}{renderUser} function on line 6, which eventually shows the users complete profile information in the user interface.
+
+Listing \ref{lst:data-flow-observer} leverages a custom implementation of the Observer design pattern after Gamma et al. \cite{gamma1995design}, providing the same level of functionality as Listing \ref{lst:data-flow-rp} did using RP.
 
 \begin{listing}[H]
 	\begin{minted}{JavaScript}
 		const profileObservable = observable();
 		const avatarObservable = observable();
 
-		avatarObservable.addObserver(observable => {
-			renderUser({
-				...profileObservable.value,
-				...observable.value
-			});
-		});
-
-		profileObservable.addObserver(async ({ value: profile }) => {
-			const avatar = await fetchAvatar(profile);
+		profileObservable.addObserver(async () => {
+			const avatar = await fetchAvatar(profileObservable.value);
 			avatarObservable.value = avatar;
 			avatarObservable.notify();
+		});
+
+		avatarObservable.addObserver(() => {
+			renderUser({
+				...profileObservable.value,
+				...avatarObservable.value
+			});
 		});
 
 		fetchProfile().then(profile => {
@@ -268,6 +270,10 @@ Whereas Listing \ref{lst:data-flow-observer} leverages an implementation of the 
 	\caption{Render user profile using a custom Observer API}
 	\label{lst:data-flow-observer}
 \end{listing}
+
+After two observables for profile and avatar information are created (lines 1-2), an observer on the \mintinline{JavaScript}{profileObservable} is registered on line 4. Given callback function will wait for \mintinline{JavaScript}{fetchAvatar} resolving with the requested information. Notice here how the functions parameter is referenced from \mintinline{JavaScript}{profileObservable}s current \mintinline{JavaScript}{value} (line 5). Once the avatar information is available, it is stored (line 6) and the observer registered on line 10 is executed by calling \mintinline{JavaScript}{notify} (line 7). This observer (lines 10-15) combines the current values of both observables and calls \mintinline{JavaScript}{renderUser}. On line 17, \mintinline{JavaScript}{fetchProfile} is finally called. Once the returned \mintinline{JavaScript}{Promise} resolves with the \mintinline{JavaScript}{profile}, it is kept as \mintinline{JavaScript}{profileObservable}s \mintinline{JavaScript}{value} (line 18) and the observer from line 4 is executed through another \mintinline{JavaScript}{notify} call (line 19).
+
+By sole comparison of the line count of both presented solutions, the results of Salvaneschi et al. \cite{7827078} regarding reduced boilerplate code through RP are confirmed. Whereas the Observer example needs to implement code for handling \mintinline{JavaScript}{fetchProfile}s result (line 5) before the function itself is even called (line 17), the RP implementation reflects the mental model of fetching one depending resource after its predecessor more concisely further.
 
 \subsection{Event Handling}
 
